<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutLinear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtViewSortear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clique_abaixo_para_sortear_um_numero" />

    <Button
        android:id="@+id/btnSortear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clickSortear"
        android:text="@string/sortear" />

    <TextView
        android:id="@+id/txtViewReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clique_no_botao_para_reiniciar_o_bingo" />

    <Button
        android:id="@+id/btnResetarSorteio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clickResetar"
        android:text="@string/resetar" />

    <TextView
        android:id="@+id/txtViewInfoNumeros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/numeros_sorteados" />

    <TextView
        android:id="@+id/textViewMostraNumerosJaSorteados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>